# ki_basics

./: .gitignore  README.md  pyproject.toml  requirements.txt
datasets/: divi_data.csv  melb_data.csv  occupancy.csv  sales_all.csv  tweets.csv
notebooks/: 2.6.Reuters_exercise.ipynb  GPT4Vision.ipynb  Regression mit Scikit-Learn.ipynb  ann_cnn.ipynb  ml_workflow.ipynb  plot_document_clustering.ipynb
