[tool.poetry]
name = "ki-grundlagen-prehcm-2024"
version = "0.1.0"
description = ""
authors = ["MaGeKo-Exxeta <matti.gerrit.korff@exxeta.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
jupyter = "^1.0.0"
pyarrow = "^15.0.0"
folium = "^0.15.1"
missingno = "^0.5.2"
plotly = "^5.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
